# hisinad

./: CMakeLists.txt  README
cfg/: common.c  common.h  sensor_cfg_print.c  sensor_config.c  sensor_config.h
platform/: sdk.h  sdk_audio.c  sdk_isp.c  sdk_sensor.c  sdk_sys.c  sdk_ugly.c
pumap/: vi.c  vi.h
test/: test_ao.c  test_cfg_read.c  test_cfg_sensor.c  test_jpeg.c  test_pumap_vi.c
test/data/test_cfg_read/: 1.ini  2.ini  3.ini  4.ini  5.ini  7.ini  8.ini  result.output  run_tests.sh  test_read_6.txt
test/data/test_cfg_sensor/: 1.ini  2.ini  3.txt  result.output  run_tests.sh
test/data/test_pumap_vi/: vi_ex1  vi_ex2  vi_gad_ex2
